--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <section>
 
-	<img src="F:\fabevy\git\Resume-2\photo\resume img1.png" align="right" height="170px" width="120px">
+	<img src="photo/resume img1.png" align="right" height="170px" width="120px">
 	<h2>Jackie P.Adams</h2>
 	 <p>Self -driven and EIT certified recent graduate seeking a full-time position as an <br>electrical engineer to leverage strong design skills. looking to leverage<br>AutoCAD,Microstation,and Revit skills and experience to solve problems for<br>DSR companies.</p>
 	
